Fix spacing above card title

--- a/src/atomic-ui/IdeaCard.module.css
+++ b/src/atomic-ui/IdeaCard.module.css
@@ -38,7 +38,7 @@
 }
 
 .card h3 {
-  margin: 0;
+  margin: 1.5rem 0 0;
   font-size: 1.5rem;
 }
 
